--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
             background: linear-gradient(135deg, #fdf2f2 0%, #e8d5d5 100%);
         }
 
+        .game-card:nth-child(6) {
+            background: linear-gradient(135deg, #fef7e0 0%, #f5deb3 100%);
+        }
+
         @media (max-width: 768px) {
             h1 {
                 font-size: 2em;
@@ -151,6 +155,14 @@
                 <div class="game-title">Augustus</div>
                 <div class="game-description">
                     Conquérez le monde romain ! Gérez vos villes, recrutez des armées et menez des batailles épiques en temps réel.
+                </div>
+            </a>
+
+            <a href="cleopatre/index.html" class="game-card">
+                <span class="game-icon">🏛️</span>
+                <div class="game-title">Cléopâtre</div>
+                <div class="game-description">
+                    Construisez et gérez un village égyptien pour Cléopâtre ! Obéissez à ses ordres ou subissez sa colère. Atteignez 10 000 habitants pour gagner.
                 </div>
             </a>
         </div>
