--- a/cleopatre/index.html
+++ b/cleopatre/index.html
@@ -104,7 +104,7 @@
                         <div class="task-header-row">
                             <div class="task-header">Tâches de Cléopâtre:</div>
                             <label class="toggle-switch" title="Envoi automatique des ressources">
-                                <input type="checkbox" id="autoSendGlobal">
+                                <input type="checkbox" id="autoSendGlobal" autocomplete="off">
                                 <span class="slider"></span>
                                 <span class="switch-label">Auto</span>
                             </label>
