--- a/cleopatre/index.html
+++ b/cleopatre/index.html
@@ -151,7 +151,7 @@
         <!-- Panneau latéral d'info -->
         <div id="sidePanel" class="hidden">
             <div id="sidePanelContent"></div>
-            <button class="close-btn" data-action="closeSidePanel">✕</button>
+            <button class="close-btn close-btn-sm" data-action="closeSidePanel">✕</button>
         </div>
     </div>
 
