--- a/cleopatre/index.html
+++ b/cleopatre/index.html
@@ -175,10 +175,12 @@
                     <div class="resource-bar-item clickable" data-resource="wood">
                         <div class="resource-bar-icon">🪵</div>
                         <div class="resource-bar-info">
-                            <div class="resource-bar-name">Bois</div>
+                            <div class="resource-bar-header">
+                                <span class="resource-bar-name">Bois</span>
+                                <span class="resource-bar-yield">+10</span>
+                            </div>
                             <div class="resource-bar-stock">
                                 <span id="woodStockBar">0</span>
-                                <span class="resource-bar-yield">+10</span>
                                 <span id="woodPendingBar" class="resource-bar-pending"></span>
                             </div>
                         </div>
@@ -196,10 +198,12 @@
                     <div class="resource-bar-item clickable" data-resource="stone">
                         <div class="resource-bar-icon">🪨</div>
                         <div class="resource-bar-info">
-                            <div class="resource-bar-name">Pierre</div>
+                            <div class="resource-bar-header">
+                                <span class="resource-bar-name">Pierre</span>
+                                <span class="resource-bar-yield">+8</span>
+                            </div>
                             <div class="resource-bar-stock">
                                 <span id="stoneStockBar">0</span>
-                                <span class="resource-bar-yield">+8</span>
                                 <span id="stonePendingBar" class="resource-bar-pending"></span>
                             </div>
                         </div>
@@ -217,10 +221,12 @@
                     <div class="resource-bar-item clickable" data-resource="sand">
                         <div class="resource-bar-icon">🏜️</div>
                         <div class="resource-bar-info">
-                            <div class="resource-bar-name">Sable</div>
+                            <div class="resource-bar-header">
+                                <span class="resource-bar-name">Sable</span>
+                                <span class="resource-bar-yield">+15</span>
+                            </div>
                             <div class="resource-bar-stock">
                                 <span id="sandStockBar">0</span>
-                                <span class="resource-bar-yield">+15</span>
                                 <span id="sandPendingBar" class="resource-bar-pending"></span>
                             </div>
                         </div>
@@ -238,10 +244,12 @@
                     <div class="resource-bar-item clickable" data-resource="dirt">
                         <div class="resource-bar-icon">🟤</div>
                         <div class="resource-bar-info">
-                            <div class="resource-bar-name">Terre</div>
+                            <div class="resource-bar-header">
+                                <span class="resource-bar-name">Terre</span>
+                                <span class="resource-bar-yield">+12</span>
+                            </div>
                             <div class="resource-bar-stock">
                                 <span id="dirtStockBar">0</span>
-                                <span class="resource-bar-yield">+12</span>
                                 <span id="dirtPendingBar" class="resource-bar-pending"></span>
                             </div>
                         </div>
@@ -259,10 +267,12 @@
                     <div class="resource-bar-item clickable" data-resource="clay">
                         <div class="resource-bar-icon">🧱</div>
                         <div class="resource-bar-info">
-                            <div class="resource-bar-name">Argile</div>
+                            <div class="resource-bar-header">
+                                <span class="resource-bar-name">Argile</span>
+                                <span class="resource-bar-yield">+6</span>
+                            </div>
                             <div class="resource-bar-stock">
                                 <span id="clayStockBar">0</span>
-                                <span class="resource-bar-yield">+6</span>
                                 <span id="clayPendingBar" class="resource-bar-pending"></span>
                             </div>
                         </div>
