--- a/cleopatre/index.html
+++ b/cleopatre/index.html
@@ -355,7 +355,7 @@
         <div class="victory-content">
             <div id="victorySprite" class="end-screen-sprite"></div>
             <h1>🎉 VICTOIRE ! 🎉</h1>
-            <p>Félicitations ! Votre village compte maintenant 10 000 habitants !</p>
+            <p id="victoryMessage">Félicitations ! Vous avez atteint l'objectif !</p>
             <p>Cléopâtre est fière de vous et vous couvre d'or et de gloire.</p>
             <div id="victoryStats"></div>
             <button data-action="showMenu">Retour au Menu</button>
